--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ p {
   font-size: 94px;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   text-align: center;
-  background-image: url("https://media.istockphoto.com/id/113494458/photo/fire-isolated-over-black-background.jpg?s=612x612&w=0&k=20&c=u6STGsSpJAyBN8kDeqnVUla4-0SnLpdaTsehFsey2p0=");
+  background-image: url("https://media.tenor.com/PEDzvMlrdi0AAAAC/fire.gif");
   background-repeat: repeat;
   background-position: bottom;
   -webkit-background-clip: text;
